# NewtonianFootball2D

./: .gitmodules  CMakeLists.txt  README.md
include/: log.hpp  thread.hpp  timers.hpp
src/: c_smart_ptr.cpp  config.hpp  game.cpp  globals.cpp  log.cpp  main.cpp  phys.cpp  thread.cpp  timers.cpp
